--- a/1.24/Dockerfile
+++ b/1.24/Dockerfile
@@ -15,7 +15,14 @@ RUN set -x; \
     && apt-get purge -y --auto-remove g++ libicu-dev \
     && rm -rf /var/lib/apt/lists/*
 
-RUN docker-php-ext-install mysqli opcache ldap
+RUN docker-php-ext-install mysqli opcache
+
+RUN \
+    apt-get update && \
+    apt-get install libldap2-dev -y && \
+    rm -rf /var/lib/apt/lists/* && \
+    docker-php-ext-configure ldap --with-libdir=lib/x86_64-linux-gnu/ && \
+    docker-php-ext-install ldap
 
 RUN set -x; \
     apt-get update \
