--- a/1.24/Dockerfile
+++ b/1.24/Dockerfile
@@ -1,6 +1,8 @@
 FROM php:apache
 
-MAINTAINER DACRepair 
+MAINTAINER DACRepair
+
+ENV MW_BRANCH=REL1_28
 
 RUN apt-get update \
     && apt-get -y --no-install-recommends install \
@@ -17,14 +19,14 @@ RUN apt-get purge -y --auto-remove g++ libicu-dev zlib1g-dev libxml2-dev libldap
 
 RUN a2enmod rewrite
 
-RUN git clone https://github.com/wikimedia/mediawiki.git /var/www/html
+RUN git clone -b $MW_BRANCH https://github.com/wikimedia/mediawiki.git /var/www/html
+
+RUN mkdir /var/www/html/vendor
+RUN git clone -b $MW_BRANCH https://gerrit.wikimedia.org/r/p/mediawiki/vendor.git /var/www/html/vendor
+
+WORKDIR /var/www/html
 
 COPY apache/mediawiki.conf /etc/apache2/
-
 RUN echo Include /etc/apache2/mediawiki.conf >> /etc/apache2/apache2.conf
-
-COPY docker-entrypoint.sh /entrypoint.sh
-
-ENTRYPOINT ["/entrypoint.sh"]
 
 CMD ["apache2-foreground"]
